loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:17: error: '<-' expected but integer literal found.
for(stepper<_ 1 to 3)
              ^LoopStairs:20: error: illegal start of simple expression
	}
        ^